minor margin change to stop overlap on nav elements

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,6 @@
 #navbar > ul {
   display: flex;
 }
+#navbar > ul > li {
+  margin-right: 20px;
+}
